--- a/my site/index.html
+++ b/my site/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My restaurant</h1>
-    <h2>Menù</h2>
+    <nav>
+        <h1>My restaurant</h1>
+        <h2>Menù</h2>
+    </nav>
 </body>
 </html>
