add new features

--- a/my site/index.html
+++ b/my site/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <h1>My restaurant</h1>
+        <h1>My restaurant!</h1>
         <h2>Menù</h2>
     </nav>
 </body>
