--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <h1>My restaurant!</h1>
-        <h2>Menù</h2>
+        <h2>Ciao Fefe!</h2>
     </nav>
 </body>
 </html>
