--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sito_Fra</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>My Site</h1>
+    <h2>Ciao Fefe!</h2>
+    <nav>Nav</nav>
+    <dialog>dialog</dialog>
+    <footer>footer</footer>
+    
     <nav>
-        <h1>My restaurant!</h1>
+        <h1>My Site</h1>
         <h2>Ciao Fefe!</h2>
+        <nav>Nav</nav>
+        <dialog>dialog</dialog>
+        <footer>footer</footer>
     </nav>
 </body>
 </html>
