--- a/index.html
+++ b/index.html
@@ -7,18 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My Site</h1>
-    <h2>Ciao Fefe!</h2>
-    <nav>Nav</nav>
-    <dialog>dialog</dialog>
-    <footer>footer</footer>
-    
-    <nav>
-        <h1>My Site</h1>
-        <h2>Ciao Fefe!</h2>
-        <nav>Nav</nav>
-        <dialog>dialog</dialog>
-        <footer>footer</footer>
-    </nav>
+    <header>
+        <h1>my site h1</h1>
+        <h2>my site h2</h2>
+        <h3>my site h3</h3>
+        <h4>my site h4</h4>
+        <h5>my site h5</h5>
+        <h6>my site h6</h6>
+        <p>my site p</p>
+    </header>
+    <aside>
+        <h4>aside</h4>
+        <section>
+            <p>section_p</p>
+        </section>    
+    </aside>
+    <details>details</details>  
+    <footer>
+        <p>footer_p</p>
+    </footer>
 </body>
 </html>
