--- a/index.html
+++ b/index.html
@@ -1,33 +1,13 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sito_Fra</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>my site h1</h1>
-        <h2>my site h2</h2>
-        <h3>my site h3</h3>
-        <h4>my site h4</h4>
-        <h5>my site h5</h5>
-        <h6>my site h6</h6>
-        <p>my site p</p>
-    </header>
-    <aside>
-        <h4>aside</h4>
-        <section>
-            <p>section_p</p>
-        </section>    
-    </aside>
-    <details>details</details>  
-    <footer>
-        <p>footer_p</p>
-    </footer>
-</body>
-<footer>
-    <p>footer</p>
-</footer>
+<!doctype html>
+<html lang="en" data-bs-theme="dark">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 </html>
